// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can load structs from an assembly in the current working directory 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyExtendedInterface
 */
export interface MyExtendedInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can map properties 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * This property is required
   * @default true
   */
  readonly propFour: boolean;
  readonly aNumber: number;
  readonly aString: string;
  readonly aDate: date;
}
"
`;

exports[`can mixin a struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can mixin another projen struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
}
"
`;

exports[`can rename a prop 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  readonly newProp?: boolean;
}
"
`;

exports[`can replace a prop 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  readonly newProp: number;
}
"
`;

exports[`can update props 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * New summary
   * @default "projenrc"
   * @stability stable
   * @pjnew "newVal"
   */
  readonly projenCodeDir: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can updateAll props 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability stable
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability stable
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability stable
   */
  readonly filename?: string;
}
"
`;

exports[`can updateEvery property 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * This property is required
   */
  readonly propThree: boolean;
  /**
   * This property is required
   */
  readonly propTwo: boolean;
  /**
   * This property is required
   */
  readonly propOne: boolean;
}
"
`;

exports[`can use struct as type in add 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default .projenRC.ts
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can use struct as type in add 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import type { MyInterface } from './';

/**
 * MyBaseInterface
 */
export interface MyBaseInterface {
  /**
   * My new Summary
   */
  readonly projenrcTsOptions: MyInterface;
}
"
`;

exports[`can use the result of a chain 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
}
"
`;
